<resources>
    <string name="app_name">Cura</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_capitalized">CURA</string>
    <string name="email">Email Address*</string>
    <string name="pwd">Password*</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="create_account">Create an Account</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_selection">Account Type</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="create_doc">Create Doctor Account</string>
    <string name="sex">Sex*: </string>
    <string name="birthday">Birth Date*:</string>
    <string name="account">Account</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="degree">Degree(s)</string>
    <string name="FirstName">First Name*</string>
    <string name="LastName">Last Name*</string>
    <string name="Email">E-Mail Address*"</string>
    <string name="profile">Profile</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="insurance">Insurance</string>
    <string name="healthConcerns">Health Concerns</string>
    <string name="Password">Password (6-16 characters)*</string>
    <string name="ReenterPassword">Re-enter Password*</string>
    <string name="CreatePatientAccount">Create Patient Account</string>
    <string name="speciality">Speciality(ies)</string>
    <string name="facility">Facility(ies)</string>
    <string name="DoctorFacility">FACILITIES :</string>
    <string name="phone">Phone number*</string>
    <string name="re_pwd">Re-enter Password*</string>
    <string name="register">Register</string>
    <string name="name">Name*</string>
    <string name="encrypt_key">enfldsgbnlsngdlksdsgm</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>

    <string name="title_activity_navigation_drawer">navigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="appointment">Appointments</string>
    <string name="request">Request</string>
    <string name="health">Health</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="signOut">Sign Out</string>
    <string name="nameSettings">Name</string>
    <string name="sexSettings">Sex</string>
    <string name="birthdaySettings">Birth Date</string>
    <string name="save">Save</string>

    <string-array name="Settings">
        <item>Picture</item>
        <item>Basic Information</item>
        <item>Password</item>
    </string-array>

    <string-array name="DoctorSettings">
        <item>Picture</item>
        <item>Basic Information</item>
        <item>Professional Information</item>
        <item>Password</item>
    </string-array>

    <string-array name="ProfessionalSettings">
        <item>Working Hour</item>
        <item>Other</item>
    </string-array>

    <string-array name="Insurance">
        <item>Aetna</item>
        <item>Altius</item>
        <item>Assurant Health</item>
        <item>BlueCross BlueShield</item>
        <item>Celtic Healthcare</item>
        <item>Cigna</item>
        <item>United HealthCare</item>
        <item>Humana</item>
        <item>Molina</item>
        <item>Kaiser</item>
        <item>Fidelis Care</item>
        <item>N/A</item>
    </string-array>


    <string name="DoctorSearch">Doctor Search</string>
    <string name="ProfileView">Profile View</string>
    <string name="Name">Name :</string>
    <string name="Location">Location :</string>
    <string name="current">Current</string>
    <string name="WorkingTime">Working Time</string>
    <string name="Gender">GENDER</string>
    <string name="SpecialityU">SPECIALITY</string>
    <string name="Experience">YEARS EXPERIENCE</string>
    <string name="PriceRange">PRICE RANGES</string>
    <string name="past">Past</string>
    <string name="add_health_tracker">Add Condition/Symptom</string>
    <string name="health_tracker">Health tracker</string>
    <string name="Speciality">Speciality :</string>
    <string name="Search">Search</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="ManuallyEnter">Manually Enter</string>
    <string name="logOut">Log out</string>
    <string name="logOutMes">Are you sure to log out this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="searchSymptom">Symptom </string>
    <string name="searchCondition">Condition </string>
    <string name="condition">Condition</string>
    <string name="symptom">Symptom</string>
    <string name="back">Back</string>
    <string name="filter_name">Search</string>
    <string name="BookAppointment">Book Appointment</string>
    <string name="Date">Date</string>
    <string name="AppointmentLength">Appointment Length :</string>
    <string name="Time">Time</string>
    <string name="ChooseTime">Choose Time</string>
    <string name="Comment">Comment</string>
    <string name="RequestAppointment">Request Appointment</string>
    <string name="HintText">Please choose</string>
    <string-array name="ApptLength">
        <item>0.5 hour</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
    </string-array>
    <string name="Availability">Availability</string>
    <string-array name="TimeFrame48">
        <item>12am</item>
        <item>12:30am</item>
        <item>1am</item>
        <item>1:30am</item>
        <item>2am</item>
        <item>2:30am</item>
        <item>3am</item>
        <item>3:30am</item>
        <item>4am</item>
        <item>4:30am</item>
        <item>5am</item>
        <item>5:30am</item>
        <item>6am</item>
        <item>6:30am</item>
        <item>7am</item>
        <item>7:30am</item>
        <item>8am</item>
        <item>8:30am</item>
        <item>9am</item>
        <item>9:30am</item>
        <item>10am</item>
        <item>10:30am</item>
        <item>11am</item>
        <item>11:30am</item>
        <item>12pm</item>
        <item>12:30pm</item>
        <item>1pm</item>
        <item>1:30pm</item>
        <item>2pm</item>
        <item>2:30pm</item>
        <item>3pm</item>
        <item>3:30pm</item>
        <item>4pm</item>
        <item>4:30pm</item>
        <item>5pm</item>
        <item>5:30pm</item>
        <item>6pm</item>
        <item>6:30pm</item>
        <item>7pm</item>
        <item>7:30pm</item>
        <item>8pm</item>
        <item>8:30pm</item>
        <item>9pm</item>
        <item>9:30pm</item>
        <item>10pm</item>
        <item>10:30pm</item>
        <item>11pm</item>
        <item>11:30pm</item>
    </string-array>
    <string name="Facility">Facility</string>
    <string-array name="sort_by">
        <item>Name</item>
        <item>Rating</item>
        <item>Price</item>
    </string-array>

    <string name="sort_by_prompt">Sort by: </string>
    <string name="title_activity_navi">navi</string>
    <string name="upload">Upload</string>
    <string name="pick_image">Pick Image</string>
    <string name="description">Description</string>
    <string name="commonCondition">Associated Conditions</string>
    <string name="commonSymptom">Common Symptoms</string>
    <string name="findDoctor">Find a doctor</string>
    <string name="startDate">Start date:</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="endDate">End date:</string>
    <string name="Appointment">Appointments</string>
    <string name="Pending">  PENDING  </string>
    <string name="Rejected">  REJECTED  </string>
    <string name="Cancel">  CANCELLED  </string>
    <string name="Complete">  COMPLETED  </string>
    <string name="Incomplete">  INCOMPLETE  </string>
    <string name="cancel">Cancel</string>
    <string name="add_title_condition">Details about your condition</string>
    <string name="add_title_symptom">Details about your symptom</string>
    <string name="warning">Warning</string>
    <string name="seeMore">see more…</string>
    <string name="seeLess">see less</string>
    <string name="add_specialties">Add Specialties</string>
    <string name="add_facilities">Add Facilities</string>
    <string name="specialties">Specialities</string>
    <string name="facilities">Facilities</string>
    <string name="title_activity_other_settings">OtherSettingsActivity</string>
    <string name="qualify_degree">Qualifying Degree</string>
    <string name="experience_start">Experience Start</string>
    <string name="price_range">Price Range</string>
    <string name="hyphen">-</string>
    <string-array name="Time48">
        <item>00:00:00</item>
        <item>00:30:00</item>
        <item>01:00:00</item>
        <item>01:30:00</item>
        <item>02:00:00</item>
        <item>02:30:00</item>
        <item>03:00:00</item>
        <item>03:30:00</item>
        <item>04:00:00</item>
        <item>04:30:00</item>
        <item>05:00:00</item>
        <item>05:30:00</item>
        <item>06:00:00</item>
        <item>06:30:00</item>
        <item>07:00:00</item>
        <item>07:30:00</item>
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
        <item>17:30:00</item>
        <item>18:00:00</item>
        <item>18:30:00</item>
        <item>19:00:00</item>
        <item>19:30:00</item>
        <item>20:00:00</item>
        <item>20:30:00</item>
        <item>21:00:00</item>
        <item>21:30:00</item>
        <item>22:00:00</item>
        <item>22:30:00</item>
        <item>23:00:00</item>
        <item>23:30:00</item>
    </string-array>
</resources>
