<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/calendar"
            android:title="@string/appointment" />
    </group>

    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/request"
            android:title="@string/request" />
    </group>

    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/message" />
    </group>

    <group
        android:id="@+id/grp6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

    <group
        android:id="@+id/grp7"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/sign_out"
            android:title="@string/signOut" />
    </group>

</menu>
