<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreatePatientAccount"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:textSize="@dimen/textSizeTitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtFirstName"
            android:hint="@string/name"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/Email"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="@string/Password"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPasswordReenter"
            android:hint="@string/ReenterPassword"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"/>

    </LinearLayout>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/textSizeButton"
        android:id="@+id/btnRegister"
        android:enabled="false"
        android:background="@drawable/btn_register_state_list"/>
</LinearLayout>
