<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.RegDocAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_doc"
            android:textSize="@dimen/textSizeTitle_25"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edtPhone"
            android:hint="@string/phone"
            android:layout_marginTop="10sp"
            android:textSize="@dimen/docText_18"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/docText_18"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtPwd"
            android:hint="@string/pwd"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/docText_18"
            android:singleLine="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtRePwd"
            android:hint="@string/re_pwd"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/docText_18"
            android:singleLine="true"/>
        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnRegister"
            android:background="@drawable/btn_register_state_list"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeButton"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <ImageButton
                android:layout_width="@dimen/arrow_60"
                android:layout_height="@dimen/arrow_60"
                android:layout_gravity="bottom"
                android:background="@drawable/arrow_left"
                android:id="@+id/btnRegisterBack"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
