<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kms.cura.view.PatientHomeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeTitle"
        android:text="@string/DoctorSearch"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize"
                android:text="@string/Name"
                android:layout_weight="2"
                android:gravity="left|bottom"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtName"
                android:textSize="@dimen/textSize"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layoutLocation"
            android:layout_marginTop="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize"
                android:text="@string/Location"
                android:layout_weight="2"
                android:gravity="left|center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdbtngroupLoacation"
                    >
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CurrentLocation"
                        android:textSize="@dimen/textSize"
                        android:id="@+id/rdbtnCurrentLocation"
                        />
                    <RadioButton
                        android:textSize="@dimen/textSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ManuallyEnter"
                        android:id="@+id/rdbtnManuallyEnter"/>
                </RadioGroup>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize"
                    android:id="@+id/edtLocation"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_60"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/textSize"
                android:text="@string/Speciality"
                android:layout_weight="2"
                android:gravity="left|center_vertical"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_60"
                android:layout_weight="1"
                android:id="@+id/spnSpeciality">
            </Spinner>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/Search"
                android:textSize="@dimen/textSize"
                android:id="@+id/btnSearch"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

