<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kms.cura.view.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/icon">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:id="@+id/imageView"
                android:src="@mipmap/ic_icon"
                android:scaleType="fitEnd"
                android:minHeight="75sp"
                android:minWidth="75sp"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name_capitalized"
                android:id="@+id/textView_LoginUI_AppTitle"
                android:textSize="62sp"
                android:textColor="#558e1d"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/button_LoginUI_CreateAccount"
                android:layout_alignEnd="@+id/button_LoginUI_CreateAccount" />
        </LinearLayout>
    </RelativeLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_LoginUI_Email"
        android:layout_below="@+id/icon"
        android:layout_marginTop="30sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_LoginUI_Password"
        android:hint="@string/pwd"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_LoginUI_Email"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif"
        android:textSize="25sp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button_LoginUI_Login"
        android:layout_below="@+id/editText_LoginUI_Password"
        android:layout_alignRight="@+id/editText_LoginUI_Password"
        android:layout_alignEnd="@+id/editText_LoginUI_Password"
        android:textSize="@dimen/textSizeButton"
        android:textColor="@color/white"
        android:background="@drawable/btn_register_state_list"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_account"
        android:id="@+id/textView_LoginUI_NoAccount"
        android:textSize="27sp"
        android:layout_below="@+id/button_LoginUI_ForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/button_LoginUI_CreateAccount"
        android:layout_below="@+id/textView_LoginUI_NoAccount"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="@dimen/textSizeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/button_LoginUI_ForgotPassword"
        android:layout_below="@+id/button_LoginUI_Login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="#3366bb"
        android:textSize="15sp" />

</RelativeLayout>
