<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kms.cura.view.activity.ChangePasswordActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/changePassword_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:layout_width="@dimen/longTextBox"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:id="@+id/editText_currentPassword"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />

    <EditText
        android:layout_width="@dimen/longTextBox"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        android:fontFamily="sans-serif"
        android:id="@+id/editText_newPassword"
        android:layout_below="@+id/editText_currentPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp" />

    <EditText
        android:layout_width="@dimen/longTextBox"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ReenterPassword"
        android:id="@+id/editText_confirmNewPassword"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/editText_newPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_password_save"
        android:layout_marginTop="54dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_below="@+id/editText_confirmNewPassword"
        android:layout_alignRight="@+id/editText_confirmNewPassword"
        android:layout_alignEnd="@+id/editText_confirmNewPassword" />


</RelativeLayout>
